# local-telemetry

./: .dockerignore  .gitignore  CHANGELOG.md  Dockerfile  HEAL-TS-02_IMPLEMENTATION_COMPLETE.md  HEAL-TS-02_IMPLEMENTATION_SUMMARY.md  HEAL-TS-06_IMPLEMENTATION_SUMMARY.md  README.md  conftest.py  docker-compose.yml  docker-deploy.ps1  pyproject.toml  pytest.ini  requirements-dashboard.txt  requirements-dev.txt  requirements.txt  run_test.py  telemetry_service.py  test_gt03_validation.py  test_runner_custom.py  test_runner_url_builder.py  validate_config.py  validate_git_detector_standalone.py  validate_gt01.py
config/: quality_gate_config.yaml  verification_checklist.yaml
docs/: AGENT_FILE_EXTRACTION.md  AGENT_OUTPUT_EXTRACTION.md  CI_RUNNER_SETUP.md  CONFIGURATION.md  DASHBOARD_TESTING.md  DEFERRED_TEST_REFACTORING.md  DEPLOYMENT_GUIDE.md  DOCKER_DEPLOYMENT.md  MIGRATION_GUIDE.md  PRAGMA_CONFIGURATION_DECISION.md  QUALITY_GATES.md  QUICK_START.md  README.md  RUNBOOK.md  TASK_DEPENDENCIES.md  TELEMETRY_CLIENTS.md  TEST_ENVIRONMENT_SETUP.md  TROUBLESHOOTING.md  VERIFICATION_PROTOCOL.md  architecture.md  configuration.md  error-handling-verification.md  schema_constraints.md  smoke-test-results-20251231.md
docs/operations/: runbook.md  (+1 more)
migrations/: 003_add_created_at_index.sql  004_add_composite_indexes.sql  v5_add_website_fields.sql  v6_add_git_commit_columns.sql  v7_add_job_type_index.sql
monitoring/: baseline_collector.py
reports/: docs_refactor.md
schema/: telemetry_v6.sql
scripts/: Send-BackupAlert.ps1  analyze_corruption_patterns.py  analyze_docker_db.ps1  analyze_docker_db.sh  analyze_docker_db_size.py  analyze_production_data.py  associate_commits.py  auto_extract_agent_outputs.py  backup_agent_metrics_db.py  backup_database.py  backup_docker_telemetry.ps1  backup_telemetry_db.py  check_all_databases.py  check_db_integrity.py  check_task_dependencies.py  dashboard.py  dashboard_utils.py  db_archive_to_sheets.py  db_cleanup.ps1  db_retention_policy.py  db_retention_policy_batched.py  debug_insert.py  detailed_db_analysis.ps1  diagnose_pragma_settings.py  docker_retention_cleanup.ps1  e2e_final_report.sh  e2e_quick_test.sh  e2e_verification.py  e2e_verification.sh  extract_files_from_agent_output.py  final_validation.py  fix_wal_check.py  generate_sample_data.py  inspect_data.py  measure_performance.py  migrate_add_insight_id.py  migrate_v3_to_v4.py  migrate_v5.py  migrate_v5_to_v6.py  migrate_v6_fix_columns.py  (+45 more)
specs/: _index.md
tests/: conftest.py  load_test.py  smoke_test.py  test_agent_output_extraction.py  test_api.py  test_api_e2e.py  test_api_url_endpoints.py  test_archive_to_sheets.py  test_client.py  test_config.py  test_database_schema.py  test_database_writer.py  test_dependency_checking.py  test_deployment.py  test_file_extraction.py  test_git_commit_tracking.py  test_git_detector.py  test_hugo_translator_integration.py  test_integration_custom_run_id.py  test_local.py  test_mig008_integration.py  test_mock_seo_integration.py  test_models.py  test_pragma_verification.py  test_quality_gate.py  test_retry_logic.py  test_storage_setup.py  test_todo_monitoring.py  test_url_builder.py  test_verified_todo_update.py  test_verify_analysis.py
(+78 files in other folders)
